<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This software code is (c) 2010 T-Mobile USA, Inc. All Rights Reserved.
  ~
  ~ Unauthorized redistribution or further use of this material is
  ~ prohibited without the express permission of T-Mobile USA, Inc. and
  ~ will be prosecuted to the fullest extent of the law.
  ~
  ~ Removal or modification of these Terms and Conditions from the source
  ~ or binary code of this software is prohibited.  In the event that
  ~ redistribution of the source or binary code for this software is
  ~ approved by T-Mobile USA, Inc., these Terms and Conditions and the
  ~ above copyright notice must be reproduced in their entirety and in all
  ~ circumstances.
  ~
  ~ No name or trademarks of T-Mobile USA, Inc., or of its parent company,
  ~ Deutsche Telekom AG or any Deutsche Telekom or T-Mobile entity, may be
  ~ used to endorse or promote products derived from this software without
  ~ specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED ON AN "AS IS" AND "WITH ALL FAULTS" BASIS
  ~ AND WITHOUT WARRANTIES OF ANY KIND.  ALL EXPRESS OR IMPLIED
  ~ CONDITIONS, REPRESENTATIONS OR WARRANTIES, INCLUDING ANY IMPLIED
  ~ WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, OR
  ~ NON-INFRINGEMENT CONCERNING THIS SOFTWARE, ITS SOURCE OR BINARY CODE
  ~ OR ANY DERIVATIVES THEREOF ARE HEREBY EXCLUDED.  T-MOBILE USA, INC.
  ~ AND ITS LICENSORS SHALL NOT BE LIABLE FOR ANY DAMAGES SUFFERED BY
  ~ LICENSEE AS A RESULT OF USING, MODIFYING OR DISTRIBUTING THIS SOFTWARE
  ~ OR ITS DERIVATIVES.  IN NO EVENT WILL T-MOBILE USA, INC. OR ITS
  ~ LICENSORS BE LIABLE FOR LOST REVENUE, PROFIT OR DATA, OR FOR DIRECT,
  ~ INDIRECT, SPECIAL, CONSEQUENTIAL, INCIDENTAL OR PUNITIVE DAMAGES,
  ~ HOWEVER CAUSED AND REGARDLESS OF THE THEORY OF LIABILITY, ARISING OUT
  ~ OF THE USE OF OR INABILITY TO USE THIS SOFTWARE, EVEN IF T-MOBILE USA,
  ~ INC. HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
  ~
  ~ THESE TERMS AND CONDITIONS APPLY SOLELY AND EXCLUSIVELY TO THE USE,
  ~ MODIFICATION OR DISTRIBUTION OF THIS SOFTWARE, ITS SOURCE OR BINARY
  ~ CODE OR ANY DERIVATIVES THEREOF, AND ARE SEPARATE FROM ANY WRITTEN
  ~ WARRANTY THAT MAY BE PROVIDED WITH A DEVICE YOU PURCHASE FROM T-MOBILE
  ~ USA, INC., AND TO THE EXTENT PERMITTED BY LAW.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="sip_registrar_username_shema"
        android:defaultValue="@string/def_registrar_user_name_schema"
        android:title="@string/sip_registrar_username_schema"
        android:summary="@string/sip_registrar_username_schema_summary"
        android:entries="@array/shema_types_entries"
        android:entryValues="@array/shema_types_entries"
        android:dialogTitle="@string/sip_registrar_username_schema" />       

	<javax.microedition.ims.android.config.ui.ExtEditTextPreference
    	android:key="sip_registrar_username"
    	android:defaultValue="@string/def_registrar_user_name"
        android:title="@string/sip_registrar_username"
        android:summary="@string/sip_registrar_username_summary"
        android:dialogTitle="@string/sip_registrar_username" 
        validatePattern="@id/username_validator_pattern"
        validateMessage="@string/username_validator_message"/>
        
    <javax.microedition.ims.android.config.ui.ExtEditTextPreference
        android:key="sip_registrar_username_domain"
        android:defaultValue="@string/def_registrar_user_name_domain"
        android:title="@string/sip_registrar_username_domain"
        android:summary="@string/sip_registrar_username_domain_summary"
        android:dialogTitle="@string/sip_registrar_username_domain" 
        validatePattern="@id/host_validator_pattern"
        validateMessage="@string/username_domain_validator_message"/>    


	<javax.microedition.ims.android.config.ui.ExtEditTextPreference
    	android:key="sip_registrar_host"
    	android:defaultValue="@string/def_registrar_host"
        android:title="@string/sip_registrar_host"
        android:summary="@string/sip_registrar_host_summary"
        android:dialogTitle="@string/sip_registrar_host" 
        validatePattern="@id/host_validator_pattern"
        validateMessage="@string/host_validator_message"/>    

	<javax.microedition.ims.android.config.ui.ExtEditTextPreference
    	android:key="sip_registrar_port"
    	android:defaultValue="@string/def_registrar_port"
        android:title="@string/sip_registrar_port"
        android:summary="@string/sip_registrar_port_summary"
        android:dialogTitle="@string/sip_registrar_port"
        android:numeric="integer"
        android:maxLength="5" 
        validatePattern="@id/port_validator_pattern"
        validateMessage="@string/port_validator_message" />

    <EditTextPreference
    	android:key="sip_preferred_identity"
    	android:defaultValue="@string/def_preferred_identity"
        android:title="@string/sip_preferred_identity"
        android:summary="@string/sip_preferred_identity_summary"
        android:dialogTitle="@string/sip_preferred_identity"
            />
         
    
    <ListPreference
    	android:key="sip_registrar_protocol_type"
    	android:defaultValue="@string/def_connection_type"
        android:title="@string/sip_registrar_protocol_type"
        android:summary="@string/sip_registrar_protocol_type_summary"
        android:entries="@array/connection_type_entries"
        android:entryValues="@array/connection_type_entries"
        android:dialogTitle="@string/sip_registrar_protocol_type" />

    <CheckBoxPreference
        android:key="sip_dns_lookup"
        android:defaultValue="@string/def_dns_lookup"
        android:title="@string/sip_dns_lookup"
        android:summary="@string/sip_dns_lookup_summary"
        android:persistent="true"
        android:disableDependentsState="true" />
               
    <CheckBoxPreference
        android:key="sip_global_ip_discovery"
        android:defaultValue="@string/def_global_ip_discovery"
        android:title="@string/sip_global_ip_discovery"
        android:summary="@string/sip_global_ip_discovery_summary"
        android:persistent="true"
        android:disableDependentsState="true" />
               
</PreferenceScreen>
