<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This software code is (c) 2010 T-Mobile USA, Inc. All Rights Reserved.
  ~
  ~ Unauthorized redistribution or further use of this material is
  ~ prohibited without the express permission of T-Mobile USA, Inc. and
  ~ will be prosecuted to the fullest extent of the law.
  ~
  ~ Removal or modification of these Terms and Conditions from the source
  ~ or binary code of this software is prohibited.  In the event that
  ~ redistribution of the source or binary code for this software is
  ~ approved by T-Mobile USA, Inc., these Terms and Conditions and the
  ~ above copyright notice must be reproduced in their entirety and in all
  ~ circumstances.
  ~
  ~ No name or trademarks of T-Mobile USA, Inc., or of its parent company,
  ~ Deutsche Telekom AG or any Deutsche Telekom or T-Mobile entity, may be
  ~ used to endorse or promote products derived from this software without
  ~ specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED ON AN "AS IS" AND "WITH ALL FAULTS" BASIS
  ~ AND WITHOUT WARRANTIES OF ANY KIND.  ALL EXPRESS OR IMPLIED
  ~ CONDITIONS, REPRESENTATIONS OR WARRANTIES, INCLUDING ANY IMPLIED
  ~ WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, OR
  ~ NON-INFRINGEMENT CONCERNING THIS SOFTWARE, ITS SOURCE OR BINARY CODE
  ~ OR ANY DERIVATIVES THEREOF ARE HEREBY EXCLUDED.  T-MOBILE USA, INC.
  ~ AND ITS LICENSORS SHALL NOT BE LIABLE FOR ANY DAMAGES SUFFERED BY
  ~ LICENSEE AS A RESULT OF USING, MODIFYING OR DISTRIBUTING THIS SOFTWARE
  ~ OR ITS DERIVATIVES.  IN NO EVENT WILL T-MOBILE USA, INC. OR ITS
  ~ LICENSORS BE LIABLE FOR LOST REVENUE, PROFIT OR DATA, OR FOR DIRECT,
  ~ INDIRECT, SPECIAL, CONSEQUENTIAL, INCIDENTAL OR PUNITIVE DAMAGES,
  ~ HOWEVER CAUSED AND REGARDLESS OF THE THEORY OF LIABILITY, ARISING OUT
  ~ OF THE USE OF OR INABILITY TO USE THIS SOFTWARE, EVEN IF T-MOBILE USA,
  ~ INC. HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
  ~
  ~ THESE TERMS AND CONDITIONS APPLY SOLELY AND EXCLUSIVELY TO THE USE,
  ~ MODIFICATION OR DISTRIBUTION OF THIS SOFTWARE, ITS SOURCE OR BINARY
  ~ CODE OR ANY DERIVATIVES THEREOF, AND ARE SEPARATE FROM ANY WRITTEN
  ~ WARRANTY THAT MAY BE PROVIDED WITH A DEVICE YOU PURCHASE FROM T-MOBILE
  ~ USA, INC., AND TO THE EXTENT PERMITTED BY LAW.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="sip_auth_type"
        android:defaultValue="@string/def_auth_type"
        android:title="@string/sip_auth_type"
        android:summary="@string/sip_auth_type_summary"
        android:entries="@array/auth_types_entries"
        android:entryValues="@array/auth_types_entries"
        android:dialogTitle="@string/sip_auth_type" />       

	<javax.microedition.ims.android.config.ui.ExtEditTextPreference
    	android:key="sip_auth_username_schema"
    	android:defaultValue="@string/def_auth_user_name_prefix"
        android:title="@string/sip_auth_username_schema"
        android:summary="@string/sip_auth_username_schema_summary"
        android:dialogTitle="@string/sip_auth_username_schema"
        validatePattern="@id/username_schema_validator_pattern"
        validateMessage="@string/username_schema_validator_message"/>    

    <javax.microedition.ims.android.config.ui.ExtEditTextPreference
        android:key="sip_auth_username"
        android:defaultValue="@string/def_auth_user_name_info"
        android:title="@string/sip_auth_username"
        android:summary="@string/sip_auth_username_summary"
        android:dialogTitle="@string/sip_auth_username"
        validatePattern="@id/username_validator_pattern"
        validateMessage="@string/username_validator_message"/>    

    <javax.microedition.ims.android.config.ui.ExtEditTextPreference
        android:key="sip_auth_username_domain"
        android:defaultValue="@string/def_auth_user_name_domain"
        android:title="@string/sip_auth_username_domain"
        android:summary="@string/sip_auth_username_domain_summary"
        android:dialogTitle="@string/sip_auth_username_domain"
        validatePattern="@id/host_validator_pattern"
        validateMessage="@string/username_domain_validator_message"/>    

	<EditTextPreference
    	android:key="sip_auth_password"
    	android:defaultValue="@string/def_auth_user_password"
    	android:password="true"
        android:title="@string/sip_auth_password"
        android:summary="@string/sip_auth_password_summary"
        android:dialogTitle="@string/sip_auth_password"/>    

	<EditTextPreference
    	android:key="sip_auth_realm"
    	android:defaultValue="@string/def_realm"
        android:title="@string/sip_auth_realm"
        android:summary="@string/sip_auth_realm_summary"
        android:dialogTitle="@string/sip_auth_realm"/>
        
     <javax.microedition.ims.android.config.ui.ListPreferenceMultiSelect
        android:key="sip_auth_forces" 
        android:defaultValue="@string/def_auth_forces"
        android:title="@string/sip_auth_forses" 
        android:summary="@string/sip_auth_forses_summary"
        android:dialogTitle="@string/sip_auth_forses"
        android:entries="@array/forses_type_entries"
        android:entryValues="@array/forses_type_entries"/>
        
    <!-- CheckBoxPreference
        android:key="sip_auth_force"
        android:defaultValue="@string/def_auth_force"
        android:title="@string/sip_auth_force"
        android:summary="@string/sip_auth_force_summary"
        android:persistent="true"
        android:disableDependentsState="true" /-->
            
    <CheckBoxPreference
        android:key="sip_auth_simulteneous"
        android:defaultValue="@string/def_auth_simulteneous"
        android:title="@string/sip_auth_simulteneous"
        android:summary="@string/sip_auth_simulteneous_summary"
        android:persistent="true"
        android:disableDependentsState="true" />
</PreferenceScreen>
